Changed dir path from /mnt/tess to ../mnt/tess

--- a/Lightcurve-vetting.ipynb
+++ b/Lightcurve-vetting.ipynb
@@ -64,10 +64,10 @@
     "tce_tables = {}\n",
     "\n",
     "tce_files = [\n",
-    "    '/mnt/tess/astronet/tces-vetting-all.csv',\n",
-    "    '/mnt/tess/astronet/tces-vetting-v5-toi-train.csv',\n",
-    "    '/mnt/tess/astronet/tces-vetting-v5-toi-val.csv',\n",
-    "    '/mnt/tess/astronet/tces-vetting-v5-toi-test.csv',\n",
+    "    '../mnt/tess/astronet/tces-vetting-all.csv',\n",
+    "    '../mnt/tess/astronet/tces-vetting-v5-toi-train.csv',\n",
+    "    '../mnt/tess/astronet/tces-vetting-v5-toi-val.csv',\n",
+    "    '../mnt/tess/astronet/tces-vetting-v5-toi-test.csv',\n",
     "]\n",
     "\n",
     "\n",
@@ -95,8 +95,8 @@
     "             abs_offset=0,\n",
     "             abs_ylim=None,\n",
     "             item_no=0):\n",
-    "    tess_data_dir = '/mnt/tess/lc-v'\n",
-    "    reports_dir = f'/mnt/tess/rpt/png-v'\n",
+    "    tess_data_dir = '../mnt/tess/lc-v'\n",
+    "    reports_dir = f'../mnt/tess/rpt/png-v'\n",
     "\n",
     "    tce, tces_file = get_tce(tic, item_no)\n",
     "    generate_input_records.FLAGS = generate_input_records.parser.parse_args([\n",
@@ -339,7 +339,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
