--- a/Preprocess-splityear.ipynb
+++ b/Preprocess-splityear.ipynb
@@ -9,8 +9,8 @@
     "import os\n",
     "import tensorflow as tf\n",
     "\n",
-    "file_pattern = '/mnt/tess/astronet/tfrecords-38-{0}'\n",
-    "tces_file = '/mnt/tess/astronet/tces-v14-all.csv'"
+    "file_pattern = '../mnt/tess/astronet/tfrecords-38-{0}'\n",
+    "tces_file = '../mnt/tess/astronet/tces-v14-all.csv'"
    ]
   },
   {
