--- a/Preprocess-vetting.ipynb
+++ b/Preprocess-vetting.ipynb
@@ -22,9 +22,9 @@
     "pd.set_option('display.max_columns', 50)\n",
     "\n",
     "def generate_data(include_toi):\n",
-    "    tces_file = '/mnt/tess/labels/tce_bls_to_y3.csv'\n",
-    "    labels_file = '/mnt/tess/labels/labels_vetting_v1.csv'\n",
-    "    corrections_file = '/mnt/tess/labels/e_label_ephemerides.csv'\n",
+    "    tces_file = '../mnt/tess/labels/tce_bls_to_y3.csv'\n",
+    "    labels_file = '../mnt/tess/labels/labels_vetting_v1.csv'\n",
+    "    corrections_file = '../mnt/tess/labels/e_label_ephemerides.csv'\n",
     "\n",
     "    tce_table = pd.read_csv(tces_file, header=0, low_memory=False).set_index('tic_id')\n",
     "    tce_table = tce_table.drop(columns=['Unnamed: 0'])\n",
@@ -82,7 +82,7 @@
     "    joined_table = joined_table.join(labels_table, on='tic_id', how='inner')\n",
     "\n",
     "\n",
-    "    toi = pd.read_csv('/mnt/tess/labels/tce_toi_vetting_p+eb.csv', header=0, low_memory=False).set_index('tic_id')\n",
+    "    toi = pd.read_csv('../mnt/tess/labels/tce_toi_vetting_p+eb.csv', header=0, low_memory=False).set_index('tic_id')\n",
     "\n",
     "    np.random.seed(1117)\n",
     "    toi['rand'] = np.random.randint(0, 100, [len(toi)])\n",
@@ -119,16 +119,16 @@
     "\n",
     "\n",
     "t_train, t_val, t_test, all_table = generate_data(True)\n",
-    "t_train.to_csv('/mnt/tess/astronet/tces-vetting-v7-toi-train.csv')\n",
-    "t_val.to_csv('/mnt/tess/astronet/tces-vetting-v7-toi-val.csv')\n",
-    "t_test.to_csv('/mnt/tess/astronet/tces-vetting-v7-toi-test.csv')\n",
+    "t_train.to_csv('../mnt/tess/astronet/tces-vetting-v7-toi-train.csv')\n",
+    "t_val.to_csv('../mnt/tess/astronet/tces-vetting-v7-toi-val.csv')\n",
+    "t_test.to_csv('../mnt/tess/astronet/tces-vetting-v7-toi-test.csv')\n",
     "\n",
-    "all_table.to_csv('/mnt/tess/astronet/tces-vetting-all.csv')\n",
+    "all_table.to_csv('../mnt/tess/astronet/tces-vetting-all.csv')\n",
     "\n",
     "t_train, t_val, t_test, _ = generate_data(False)\n",
-    "t_train.to_csv('/mnt/tess/astronet/tces-vetting-v7-train.csv')\n",
-    "t_val.to_csv('/mnt/tess/astronet/tces-vetting-v7-val.csv')\n",
-    "t_test.to_csv('/mnt/tess/astronet/tces-vetting-v7-test.csv')\n"
+    "t_train.to_csv('../mnt/tess/astronet/tces-vetting-v7-train.csv')\n",
+    "t_val.to_csv('../mnt/tess/astronet/tces-vetting-v7-val.csv')\n",
+    "t_test.to_csv('../mnt/tess/astronet/tces-vetting-v7-test.csv')\n"
    ]
   },
   {
@@ -157,7 +157,7 @@
     "import pandas as pd\n",
     "\n",
     "def clean_tois():\n",
-    "    toi = pd.read_csv('/mnt/tess/labels/toi_p.csv', header=0, low_memory=False)\n",
+    "    toi = pd.read_csv('../mnt/tess/labels/toi_p.csv', header=0, low_memory=False)\n",
     "\n",
     "    toi = toi[toi['Period'] < 99999]\n",
     "\n",
@@ -191,7 +191,7 @@
     "\n",
     "    toi['rand'] = toi.apply(lambda r: np.random.randint(0, 100), axis=1)\n",
     "\n",
-    "    ebs = pd.read_csv('/mnt/tess/labels/ebs_ephemerides.csv', header=0, low_memory=False)\n",
+    "    ebs = pd.read_csv('../mnt/tess/labels/ebs_ephemerides.csv', header=0, low_memory=False)\n",
     "    ebs['dur'] /= 24.0\n",
     "    ebs['dep'] *= 1e6\n",
     "\n",
@@ -208,7 +208,7 @@
     "    ebs['teff'] = None\n",
     "    ebs['logg'] = None\n",
     "\n",
-    "    eb_labels = pd.read_csv('/mnt/tess/labels/additionalebs.csv', header=None, low_memory=False)\n",
+    "    eb_labels = pd.read_csv('../mnt/tess/labels/additionalebs.csv', header=None, low_memory=False)\n",
     "    ebs = ebs.set_index('tic_id').join(eb_labels.set_index(0), how='inner').reset_index()\n",
     "    ebs['tic_id'] = ebs['index']\n",
     "\n",
@@ -260,7 +260,7 @@
     "    ebs['rand'] = ebs.apply(lambda r: np.random.randint(0, 100), axis=1)\n",
     "\n",
     "    toi_pe = toi.append(ebs)\n",
-    "    toi_pe.to_csv('/mnt/tess/labels/tce_toi_vetting_p+eb.csv')\n",
+    "    toi_pe.to_csv('../mnt/tess/labels/tce_toi_vetting_p+eb.csv')\n",
     "    \n",
     "    print('TOIs:', len(toi), 'EBs:', len(ebs), 'All:', len(toi_pe))\n",
     "\n",
