--- a/Tune.ipynb
+++ b/Tune.ipynb
@@ -180,7 +180,7 @@
    "metadata": {},
    "source": [
     "```\n",
-    "python astronet/tune.py --model=AstroCNNModel --config_name=final_alpha_1 --train_files=/mnt/tess/astronet/tfrecords-38-train/* --eval_files=/mnt/tess/astronet/tfrecords-38-val/* --train_steps=0 --tune_trials=1000 --client_secrets=../client_secrets.json --study_id=38_final_alpha_1_1\n",
+    "python astronet/tune.py --model=AstroCNNModel --config_name=final_alpha_1 --train_files=../mnt/tess/astronet/tfrecords-38-train/* --eval_files=../mnt/tess/astronet/tfrecords-38-val/* --train_steps=0 --tune_trials=1000 --client_secrets=../client_secrets.json --study_id=38_final_alpha_1_1\n",
     "```"
    ]
   }
