--- a/Train.ipynb
+++ b/Train.ipynb
@@ -18,8 +18,8 @@
     "    train.FLAGS = train.parser.parse_args([\n",
     "      '--model', model_name,\n",
     "      '--config_name', config_name,\n",
-    "      '--train_files', '/mnt/tess/astronet/tfrecords-38-train/*',\n",
-    "      '--eval_files', '/mnt/tess/astronet/tfrecords-38-valid/*',\n",
+    "      '--train_files', '../mnt/tess/astronet/tfrecords-38-train/*',\n",
+    "      '--eval_files', '../mnt/tess/astronet/tfrecords-38-valid/*',\n",
     "      '--model_dir', '',\n",
     "      '--train_epochs', '2',\n",
     "      '--train_steps', '100'\n",
