--- a/Tune-vetting.ipynb
+++ b/Tune-vetting.ipynb
@@ -160,15 +160,15 @@
    "metadata": {},
    "source": [
     "```\n",
-    "python astronet/tune_vetting.py --model=AstroCNNModelVetting --config_name=vrevised --train_files=/mnt/tess/astronet/tfrecords-vetting-5-toi-train/* --eval_files=/mnt/tess/astronet/tfrecords-vetting-6-toi-val/* --pretrain_model_dir=/mnt/tess/astronet/checkpoints/revised_tuned_30_run_1 --train_steps=0 --tune_trials=10000 --client_secrets=../client_secrets.json --study_id=6_vrevised_1c\n",
+    "python astronet/tune_vetting.py --model=AstroCNNModelVetting --config_name=vrevised --train_files=../mnt/tess/astronet/tfrecords-vetting-5-toi-train/* --eval_files=../mnt/tess/astronet/tfrecords-vetting-6-toi-val/* --pretrain_model_dir=../mnt/tess/astronet/checkpoints/revised_tuned_30_run_1 --train_steps=0 --tune_trials=10000 --client_secrets=../client_secrets.json --study_id=6_vrevised_1c\n",
     "```\n",
     "\n",
     "```\n",
-    "python astronet/tune_vetting.py --model=AstroCNNModelVetting --config_name=vrevised --train_files=/mnt/tess/astronet/tfrecords-vetting-5-toi-train/* --eval_files=/mnt/tess/astronet/tfrecords-vetting-6-toi-val/* --pretrain_model_dir=/mnt/tess/astronet/checkpoints/revised_tuned_30_run_1 --train_steps=0 --tune_trials=10000 --client_secrets=../client_secrets.json --study_id=6_vrevised_1c --client_id=lab2\n",
+    "python astronet/tune_vetting.py --model=AstroCNNModelVetting --config_name=vrevised --train_files=../mnt/tess/astronet/tfrecords-vetting-5-toi-train/* --eval_files=../mnt/tess/astronet/tfrecords-vetting-6-toi-val/* --pretrain_model_dir=../mnt/tess/astronet/checkpoints/revised_tuned_30_run_1 --train_steps=0 --tune_trials=10000 --client_secrets=../client_secrets.json --study_id=6_vrevised_1c --client_id=lab2\n",
     "```\n",
     "\n",
     "```\n",
-    "python astronet/tune_vetting.py --model=AstroCNNModelVetting --config_name=vrevised --train_files=/mnt/tess/astronet/tfrecords-vetting-5-toi-train/* --eval_files=/mnt/tess/astronet/tfrecords-vetting-6-toi-val/* --pretrain_model_dir=/mnt/tess/astronet/checkpoints/revised_tuned_30_run_1 --train_steps=0 --tune_trials=10000 --client_secrets=../client_secrets.json --study_id=6_vrevised_1c --client_id=lab3\n",
+    "python astronet/tune_vetting.py --model=AstroCNNModelVetting --config_name=vrevised --train_files=../mnt/tess/astronet/tfrecords-vetting-5-toi-train/* --eval_files=../mnt/tess/astronet/tfrecords-vetting-6-toi-val/* --pretrain_model_dir=../mnt/tess/astronet/checkpoints/revised_tuned_30_run_1 --train_steps=0 --tune_trials=10000 --client_secrets=../client_secrets.json --study_id=6_vrevised_1c --client_id=lab3\n",
     "```"
    ]
   }
