Rename rows and remove rows with NaNs in vetting

--- a/Preprocess-vetting-2023Jun.ipynb
+++ b/Preprocess-vetting-2023Jun.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -10,13 +10,13 @@
      "output_type": "stream",
      "text": [
       "Total entries: 3859\n",
-      "Total labeled entries: 3838\n",
-      "Split sizes. Train: 3070; Valid: 384; Test: 384\n",
+      "Total labeled entries: 1997\n",
+      "Split sizes. Train: 1597; Valid: 200; Test: 200\n",
       "Duplicate TICs: 0\n",
       "Splits\n",
-      "  train: 3070\n",
-      "  val: 384\n",
-      "  test: 384\n"
+      "  train: 1597\n",
+      "  val: 200\n",
+      "  test: 200\n"
      ]
     }
    ],
@@ -31,7 +31,16 @@
     "fname = 'vetting-v01'\n",
     "fpath = f'../mnt/tess/labels/{fname}.csv'\n",
     "all_table = pd.read_csv(fpath, header=0, low_memory=False).set_index('Astro ID')\n",
+    "\n",
+    "## Rename or drop columns\n",
     "all_table.drop(columns=['Split'])\n",
+    "all_table = all_table.rename(columns={'filename': 'File', \n",
+    "                                      'Period': 'Per', \n",
+    "                                      'Duration': 'Dur',\n",
+    "                                      'Transit_Depth': 'Depth',\n",
+    "                                      'star_rad': 'SRad',\n",
+    "                                      'star_rad_est': 'SRadEst',\n",
+    "                                      'star_mass': 'SMass',})\n",
     "\n",
     "## Make label columns\n",
     "disps = ['e', 'p', 'n', 'b', 't', 'u', 'j']\n",
@@ -58,9 +67,10 @@
     "\n",
     "all_table = all_table.apply(set_labels, axis=1)\n",
     "\n",
-    "## Only use labelled rows\n",
+    "## Only use labelled rows and skip bad rows that have NaN in specific columns\n",
     "print(f'Total entries: {len(all_table)}')\n",
     "all_table = all_table[sum(all_table[f'disp_{d}'] for d in disps) > 0]\n",
+    "all_table = all_table[~all_table[['File', 'Per', 'Dur', 'Depth', 'Tmag', 'SRad', 'SRadEst', 'SMass']].isna().any(axis=1)]\n",
     "print(f'Total labeled entries: {len(all_table)}')\n",
     "\n",
     "## Train-test split\n",
@@ -93,82 +103,32 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "train              TIC ID Final Decision  Distinct  mk   ch   et   md   as   dm  \\\n",
-      "Astro ID                                                                    \n",
-      "2643      279979547    et      NaN         1  et   et   et  NaN  NaN  NaN   \n",
-      "3747      465353204    pt       pt         2  et   pt  NaN  NaN  NaN  NaN   \n",
-      "545       177285916    et      NaN         1  et   et   et   et   et  NaN   \n",
-      "3162      354006740    eb      NaN         1  eb   eb  NaN  NaN  NaN  NaN   \n",
-      "1242      357046804   NaN      NaN         4  nu   eu   eu   nt   pu  NaN   \n",
-      "...             ...   ...      ...       ...  ..  ...  ...  ...  ...  ...   \n",
-      "1585      424849871    eb      NaN         1  eb   eb   eb   eb   eb  NaN   \n",
-      "3419      408939191    eu       eu         2  eu   et  NaN  NaN  NaN  NaN   \n",
-      "605       201598744    pt       pt         2  et   pt   et   pt   pt  NaN   \n",
-      "1976      123827543    et      NaN         1  et  NaN   et  NaN   et   et   \n",
-      "2297      213941899    jj       jj         2  nb  NaN   eb  NaN  NaN   eb   \n",
-      "\n",
-      "          ... star_rad_est                                           filename  \\\n",
-      "Astro ID  ...                                                                   \n",
-      "2643      ...     1.928033  mk_hlsp_qlp_tess_ffi-s0023-0000000279979547_te...   \n",
-      "3747      ...     2.560464  mk_hlsp_qlp_tess_ffi-s0011-0000000465353204_te...   \n",
-      "545       ...     1.832487  mk_hlsp_qlp_tess_ffi-s0034-0000000177285916_te...   \n",
-      "3162      ...     2.052152  mk_hlsp_qlp_tess_ffi-s0019-0000000354006740_te...   \n",
-      "1242      ...     2.455185  mk_hlsp_qlp_tess_ffi-s0026-0000000357046804_te...   \n",
-      "...       ...          ...                                                ...   \n",
-      "1585      ...     1.163864  mk_hlsp_qlp_tess_ffi-s0027-0000000424849871_te...   \n",
-      "3419      ...     3.912790  mk_hlsp_qlp_tess_ffi-s0019-0000000408939191_te...   \n",
-      "605       ...     1.324830  mk_hlsp_qlp_tess_ffi-s0013-0000000201598744_te...   \n",
-      "1976      ...     9.925380  mk_hlsp_qlp_tess_ffi-s0007-0000000123827543_te...   \n",
-      "2297      ...    53.256755  mk_hlsp_qlp_tess_ffi-s0012-0000000213941899_te...   \n",
-      "\n",
-      "                             comment  disp_e disp_p  disp_n  disp_b  disp_t  \\\n",
-      "Astro ID                                                                      \n",
-      "2643      EBs from TOI group vetting       1      0       0       0       1   \n",
-      "3747      EBs from TOI group vetting       0      1       0       0       1   \n",
-      "545             E labels from triage       1      0       0       0       1   \n",
-      "3162            E labels from triage       1      0       0       1       0   \n",
-      "1242            E labels from triage       2      1       2       0       1   \n",
-      "...                              ...     ...    ...     ...     ...     ...   \n",
-      "1585            E labels from triage       1      0       0       1       0   \n",
-      "3419      EBs from TOI group vetting       1      0       0       0       0   \n",
-      "605             E labels from triage       0      1       0       0       1   \n",
-      "1976      EBs from TOI group vetting       1      0       0       0       1   \n",
-      "2297      EBs from TOI group vetting       0      0       0       0       0   \n",
-      "\n",
-      "          disp_u  disp_j  \n",
-      "Astro ID                  \n",
-      "2643           0       0  \n",
-      "3747           0       0  \n",
-      "545            0       0  \n",
-      "3162           0       0  \n",
-      "1242           4       0  \n",
-      "...          ...     ...  \n",
-      "1585           0       0  \n",
-      "3419           1       0  \n",
-      "605            0       0  \n",
-      "1976           0       0  \n",
-      "2297           0       1  \n",
-      "\n",
-      "[3070 rows x 39 columns]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "Astro ID\n",
+       "1       False\n",
+       "3       False\n",
+       "4       False\n",
+       "5       False\n",
+       "7       False\n",
+       "        ...  \n",
+       "3823    False\n",
+       "3824    False\n",
+       "3825    False\n",
+       "3830    False\n",
+       "3849    False\n",
+       "Length: 1997, dtype: bool"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(\"train\", t_train)\n",
-    "# print(\"val\", t_val.head())\n",
-    "# print(\"test\", t_test.head())\n"
+    "all_table[['File', 'Per', 'Dur', 'Depth', 'Tmag', 'SRad', 'SRadEst', 'SMass']].isna().any(axis=1)"
    ]
   },
   {
