Added final triage model to vetting configurations_vetting.py and ensemble_train_vetting.sh

--- a/Preprocess-vetting-2023Jun.ipynb
+++ b/Preprocess-vetting-2023Jun.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -10,13 +10,14 @@
      "output_type": "stream",
      "text": [
       "Total entries: 3859\n",
-      "Total labeled entries: 1997\n",
-      "Split sizes. Train: 1597; Valid: 200; Test: 200\n",
+      "Total labeled entries: 3838\n",
+      "Total after removing rows with missing File, Per, Dur, Depth, or Tmag: 3778\n",
+      "Split sizes. Train: 3022; Valid: 378; Test: 378\n",
       "Duplicate TICs: 0\n",
       "Splits\n",
-      "  train: 1597\n",
-      "  val: 200\n",
-      "  test: 200\n"
+      "  train: 3022\n",
+      "  val: 378\n",
+      "  test: 378\n"
      ]
     }
    ],
@@ -67,11 +68,14 @@
     "\n",
     "all_table = all_table.apply(set_labels, axis=1)\n",
     "\n",
-    "## Only use labelled rows and skip bad rows that have NaN in specific columns\n",
+    "## Only use labelled rows \n",
     "print(f'Total entries: {len(all_table)}')\n",
     "all_table = all_table[sum(all_table[f'disp_{d}'] for d in disps) > 0]\n",
-    "all_table = all_table[~all_table[['File', 'Per', 'Dur', 'Depth', 'Tmag', 'SRad', 'SRadEst', 'SMass']].isna().any(axis=1)]\n",
     "print(f'Total labeled entries: {len(all_table)}')\n",
+    "## And skip bad rows that have NaN in File', 'Per', 'Dur', 'Depth', or 'Tmag'\n",
+    "all_table = all_table[~all_table[['File', 'Per', 'Dur', 'Depth', 'Tmag']].isna().any(axis=1)]\n",
+    "print(f'Total after removing rows with missing File, Per, Dur, Depth, or Tmag: {len(all_table)}')\n",
+    "\n",
     "\n",
     "## Train-test split\n",
     "t_train, t_test = train_test_split(all_table, test_size=0.1, random_state=42)\n",
@@ -101,34 +105,415 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TIC ID</th>\n",
+       "      <th>Final</th>\n",
+       "      <th>Decision</th>\n",
+       "      <th>Distinct</th>\n",
+       "      <th>mk</th>\n",
+       "      <th>ch</th>\n",
+       "      <th>et</th>\n",
+       "      <th>md</th>\n",
+       "      <th>as</th>\n",
+       "      <th>dm</th>\n",
+       "      <th>...</th>\n",
+       "      <th>SRadEst</th>\n",
+       "      <th>File</th>\n",
+       "      <th>comment</th>\n",
+       "      <th>disp_e</th>\n",
+       "      <th>disp_p</th>\n",
+       "      <th>disp_n</th>\n",
+       "      <th>disp_b</th>\n",
+       "      <th>disp_t</th>\n",
+       "      <th>disp_u</th>\n",
+       "      <th>disp_j</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Astro ID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>101179364</td>\n",
+       "      <td>et</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>et</td>\n",
+       "      <td>et</td>\n",
+       "      <td>et</td>\n",
+       "      <td>et</td>\n",
+       "      <td>et</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.098840</td>\n",
+       "      <td>mk_hlsp_qlp_tess_ffi-s0013-0000000101179364_te...</td>\n",
+       "      <td>E labels from triage</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>101255974</td>\n",
+       "      <td>eb</td>\n",
+       "      <td>eb</td>\n",
+       "      <td>2</td>\n",
+       "      <td>eb</td>\n",
+       "      <td>eb</td>\n",
+       "      <td>eb</td>\n",
+       "      <td>eb</td>\n",
+       "      <td>et</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.870666</td>\n",
+       "      <td>mk_hlsp_qlp_tess_ffi-s0018-0000000101255974_te...</td>\n",
+       "      <td>E labels from triage</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>101404344</td>\n",
+       "      <td>eb</td>\n",
+       "      <td>eb</td>\n",
+       "      <td>2</td>\n",
+       "      <td>eb</td>\n",
+       "      <td>eb</td>\n",
+       "      <td>eb</td>\n",
+       "      <td>eb</td>\n",
+       "      <td>pb</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.728549</td>\n",
+       "      <td>mk_hlsp_qlp_tess_ffi-s0027-0000000101404344_te...</td>\n",
+       "      <td>E labels from triage</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>101427335</td>\n",
+       "      <td>et</td>\n",
+       "      <td>et</td>\n",
+       "      <td>2</td>\n",
+       "      <td>et</td>\n",
+       "      <td>et</td>\n",
+       "      <td>et</td>\n",
+       "      <td>eb</td>\n",
+       "      <td>et</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.679462</td>\n",
+       "      <td>mk_hlsp_qlp_tess_ffi-s0027-0000000101427335_te...</td>\n",
+       "      <td>E labels from triage</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>10150705</td>\n",
+       "      <td>eb</td>\n",
+       "      <td>eb</td>\n",
+       "      <td>2</td>\n",
+       "      <td>eb</td>\n",
+       "      <td>et</td>\n",
+       "      <td>eb</td>\n",
+       "      <td>eb</td>\n",
+       "      <td>eb</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.794777</td>\n",
+       "      <td>mk_hlsp_qlp_tess_ffi-s0022-0000000010150705_te...</td>\n",
+       "      <td>E labels from triage</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3854</th>\n",
+       "      <td>2003022879</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>eb</td>\n",
+       "      <td>eb</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.311270</td>\n",
+       "      <td>mk_hlsp_qlp_tess_ffi-s0016-0000002003022879_te...</td>\n",
+       "      <td>E labels from triage</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3855</th>\n",
+       "      <td>2003049638</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>eb</td>\n",
+       "      <td>eb</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.421851</td>\n",
+       "      <td>mk_hlsp_qlp_tess_ffi-s0016-0000002003049638_te...</td>\n",
+       "      <td>EBs from TOI group vetting</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3856</th>\n",
+       "      <td>2014876461</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>et</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.344808</td>\n",
+       "      <td>mk_hlsp_qlp_tess_ffi-s0016-0000002014876461_te...</td>\n",
+       "      <td>EBs from TOI group vetting</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3857</th>\n",
+       "      <td>2020355003</td>\n",
+       "      <td>jj</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>jj</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6.174889</td>\n",
+       "      <td>mk_hlsp_qlp_tess_ffi-s0016-0000002020355003_te...</td>\n",
+       "      <td>EBs from TOI group vetting</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3858</th>\n",
+       "      <td>2041563029</td>\n",
+       "      <td>ets</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ets</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>mk_hlsp_qlp_tess_ffi-s0016-0000002041563029_te...</td>\n",
+       "      <td>EBs from TOI group vetting</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3778 rows × 39 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Astro ID\n",
-       "1       False\n",
-       "3       False\n",
-       "4       False\n",
-       "5       False\n",
-       "7       False\n",
-       "        ...  \n",
-       "3823    False\n",
-       "3824    False\n",
-       "3825    False\n",
-       "3830    False\n",
-       "3849    False\n",
-       "Length: 1997, dtype: bool"
+       "              TIC ID Final Decision  Distinct   mk   ch   et   md   as   dm  \\\n",
+       "Astro ID                                                                      \n",
+       "1          101179364    et      NaN         1   et   et   et   et   et  NaN   \n",
+       "2          101255974    eb       eb         2   eb   eb   eb   eb   et  NaN   \n",
+       "3          101404344    eb       eb         2   eb   eb   eb   eb   pb  NaN   \n",
+       "4          101427335    et       et         2   et   et   et   eb   et  NaN   \n",
+       "5           10150705    eb       eb         2   eb   et   eb   eb   eb  NaN   \n",
+       "...              ...   ...      ...       ...  ...  ...  ...  ...  ...  ...   \n",
+       "3854      2003022879   NaN      NaN         2   eb   eb  NaN  NaN  NaN  NaN   \n",
+       "3855      2003049638   NaN      NaN         2   eb   eb  NaN  NaN  NaN  NaN   \n",
+       "3856      2014876461   NaN      NaN         2   et  NaN  NaN  NaN  NaN  NaN   \n",
+       "3857      2020355003    jj      NaN         1   jj  NaN  NaN  NaN  NaN  NaN   \n",
+       "3858      2041563029   ets      NaN         1  ets  NaN  NaN  NaN  NaN  NaN   \n",
+       "\n",
+       "          ...   SRadEst                                               File  \\\n",
+       "Astro ID  ...                                                                \n",
+       "1         ...  1.098840  mk_hlsp_qlp_tess_ffi-s0013-0000000101179364_te...   \n",
+       "2         ...  4.870666  mk_hlsp_qlp_tess_ffi-s0018-0000000101255974_te...   \n",
+       "3         ...  1.728549  mk_hlsp_qlp_tess_ffi-s0027-0000000101404344_te...   \n",
+       "4         ...  1.679462  mk_hlsp_qlp_tess_ffi-s0027-0000000101427335_te...   \n",
+       "5         ...  0.794777  mk_hlsp_qlp_tess_ffi-s0022-0000000010150705_te...   \n",
+       "...       ...       ...                                                ...   \n",
+       "3854      ...  2.311270  mk_hlsp_qlp_tess_ffi-s0016-0000002003022879_te...   \n",
+       "3855      ...  1.421851  mk_hlsp_qlp_tess_ffi-s0016-0000002003049638_te...   \n",
+       "3856      ...  1.344808  mk_hlsp_qlp_tess_ffi-s0016-0000002014876461_te...   \n",
+       "3857      ...  6.174889  mk_hlsp_qlp_tess_ffi-s0016-0000002020355003_te...   \n",
+       "3858      ...       NaN  mk_hlsp_qlp_tess_ffi-s0016-0000002041563029_te...   \n",
+       "\n",
+       "                             comment  disp_e disp_p  disp_n  disp_b  disp_t  \\\n",
+       "Astro ID                                                                      \n",
+       "1               E labels from triage       1      0       0       0       1   \n",
+       "2               E labels from triage       1      0       0       1       0   \n",
+       "3               E labels from triage       1      0       0       1       0   \n",
+       "4               E labels from triage       1      0       0       0       1   \n",
+       "5               E labels from triage       1      0       0       1       0   \n",
+       "...                              ...     ...    ...     ...     ...     ...   \n",
+       "3854            E labels from triage       2      0       0       2       0   \n",
+       "3855      EBs from TOI group vetting       3      0       0       2       1   \n",
+       "3856      EBs from TOI group vetting       2      0       0       1       1   \n",
+       "3857      EBs from TOI group vetting       0      0       0       0       0   \n",
+       "3858      EBs from TOI group vetting       1      0       0       0       1   \n",
+       "\n",
+       "          disp_u  disp_j  \n",
+       "Astro ID                  \n",
+       "1              0       0  \n",
+       "2              0       0  \n",
+       "3              0       0  \n",
+       "4              0       0  \n",
+       "5              0       0  \n",
+       "...          ...     ...  \n",
+       "3854           0       2  \n",
+       "3855           0       0  \n",
+       "3856           0       0  \n",
+       "3857           0       1  \n",
+       "3858           0       0  \n",
+       "\n",
+       "[3778 rows x 39 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "all_table[['File', 'Per', 'Dur', 'Depth', 'Tmag', 'SRad', 'SRadEst', 'SMass']].isna().any(axis=1)"
+    "# all_table[['File', 'Per', 'Dur', 'Depth', 'Tmag', 'SRad', 'SRadEst', 'SMass']].isna().any(axis=1)\n",
+    "all_table"
    ]
   },
   {
@@ -155,7 +540,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4
  },
